# fluffle

./: .env.example  .gitignore  Cargo.toml  HEADLESS_MODE_PLAN.md  HEADLESS_MODE_SUMMARY.md  LICENSE  README.md  README_REVIEW.md  agent-stack.md  bubbly-squishing-canyon.md  file_reference.md  findings.md  layout.md  plugin-overhaul.md  prd.md  task_plan.md  tasks.md  todo.md  ui.md  ui_modern.md
app/agents/: security-auditor.json
app/tools/: file_read.json  git_status.json
apps/coding/agents/: builder-agent.json  develop.json  dispatcher.json  explorer.json  generalist.json  planner.json  task-agent.json  worker.json
apps/coding/tools/: bash_exec.json  file_edit.json  file_list.json  list_files.json
apps/manus/: README.md
apps/manus/agents/: developer.json  dispatcher.json  (+5 more)
apps/plan-builder/: README.md
config/: default.toml
scripts/: test_e2e.sh  test_e2e_quick.sh
src/: agent.rs  agent_profile.rs  agent_thread.rs  agents.rs  app_name.rs  config.rs  debug_log.rs  error.rs  headless.rs  lib.rs  main.rs  messaging.rs  plugin.rs  profile_loader.rs  test_utils.rs  token_stats.rs  types.rs
src/agent_profiles/: explorer.json  generalist.json
src/ai/: anthropic.rs  mod.rs  openai.rs  types.rs
src/loaders/: agents.rs  mod.rs  task.rs  tools.rs
src/plugins/: agent_profile.rs  bash_exec.rs  dynamic_tools.rs  explore.rs  file_ops.rs  git_ops.rs  mod.rs  task.rs
src/tools/: git_diff.json
src/ui/: advanced_tui.rs  agent_stack.rs  app.rs  channels.rs  components.rs  event.rs  headless_backend.rs  history_cell.rs  mod.rs  shared_messages.rs  simple_tui.rs  terminal_backend.rs  ui_trait.rs
tests/: agent_integration_test.rs  ai.rs  anthropic_test.rs  async_input_test.rs  async_integration_test.rs  iterative_tool_calling_test.rs  iterative_ui_updates_test.rs  main_integration_test.rs  openai_test.rs  plugin_discovery.rs  ui_components_test.rs
(+19 files in other folders)
