[package]
name = "nanocode"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.29.6"
anthropic-rs = "0.1.7"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
inventory = "0.3"
config = "0.13"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
