[package]
name = "nanocode"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = { version = "0.33.0", features = ["chat-completion"] }  # OpenAI SDK with tool calling support, edition 2021 compatible
anthropic-sdk = "0.1.5"  # Anthropic SDK with tool calling support, edition 2021 compatible
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
inventory = "0.3"
config = "0.13"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
dirs = "5.0"
structopt = "0.3"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
